fixup overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,10 +24,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont;
     background-color: #f9f9f9;
     color: var(--color-primary-foreground);
-}
-
-main {
-    padding-block-start: var(--space-l);
+    min-height: 100vh;
 }
 
 :is(input, select, textarea) {
@@ -59,7 +56,7 @@ label::after {
 }
 
 header {
-    margin-block-start: var(--space-xl);
+    padding-block-start: var(--space-xl);
 }
 
 button {
